--- a/wallet/assets/help.html
+++ b/wallet/assets/help.html
@@ -3,11 +3,11 @@
 <html>
 	<body>
 		<p>
-			The upper left part of the screen displays your selected Solcoin address that other people need to know in order to send you Solcoins.
+			The upper left part of the screen displays your selected GanjaCoin address that other people need to know in order to send you GanjaCoins.
 			Tap to change the address.
 		</p>
 		<p>
-			The QR code on the right contains your Solcoin address and can be used for scanning by another party.
+			The QR code on the right contains your GanjaCoin address and can be used for scanning by another party.
 			Tap on the QR code to get a larger version of it.
 		</p>
 		<p>
