--- a/wallet/assets/help_request_coins.html
+++ b/wallet/assets/help_request_coins.html
@@ -3,19 +3,19 @@
 <html>
 	<body>
 		<p>
-			Using this dialog, you can request coins from another person (who should already have installed Solcoin Wallet).
+			Using this dialog, you can request coins from another person (who should also have an installed GanjaCoin Wallet).
 		</p>
 		<p>
-			First, you can enter an amount of Solcoins to request.
+			First, you can enter an amount of GanjaCoins to request.
 		</p>
 		<p>
 			Then, you either have the generated QR code scanned by the other person.
 			Or, you can send your request to a remote person with the share button in the action bar.
-			The other person will have to click the Solcoin URL.
+			The other person will have to click the GanjaCoin URL.
 		</p>
 		<p>
 			Either way, the other person will be presented a dialog for sending coins with all fields pre-populated.
-			If she accepts, all she needs to do is sending the payment.
+			If they accepts, all they needs to do is send the payment.
 		</p> 
 	</body>
 </html>
