Conversion to GanjaCoin

--- a/wallet/assets/help_send_coins.html
+++ b/wallet/assets/help_send_coins.html
@@ -4,23 +4,23 @@
 	<body>
 		<p>
 			You have initiated the process of sending coins.
-			You came here either through the main screen or by clicking on a Solcoin URL in your mobile browser.
+			You came here either through the main screen or by clicking on a GanjaCoin URL in your mobile browser.
 		</p>
 		<p>
-			First, you enter the Solcoin address to pay to.
+			First, you enter the GanjaCoin address to pay to.
 			The address will autocomplete from known entries in your address book.
-			You can also scan QR codes with Solcoin addresses or Solcoin requests by pressing the QR button in the action bar.
+			You can also scan QR codes with GanjaCoin addresses or GanjaCoin requests by pressing the QR button in the action bar.
 		</p>
 		<p>
-			Next, you can see how many Solcoins you can spend at the moment.
-			Any difference to the balance from the main screen is still unconfirmed and can thus not yet be spent.
+			Next, you can see how many GanjaCoins you have available to spend at the moment.
+			Any difference between the balance from the main screen and this balance is due to still unconfirmed transactions and can thus not yet be spent.
 		</p>
 		<p>
 			Last, you enter the amount to pay.
 		</p>
 		<p>
 			You can enter a payment while being offline.
-			It will be sent on next restart of Solcoin Wallet.
+			It will be sent on next restart of GanjaCoin Wallet.
 			If you want a payment to be processed as fast as possible, make sure you are well connected (i.e. on a WLAN).
 		</p>
 		<p>
