Conversion to GanjaCoin

--- a/wallet/assets/safety.html
+++ b/wallet/assets/safety.html
@@ -5,8 +5,8 @@
 		<p><b>Important safety notes:</b></p>
 		<ul>
 			<li>
-                Solcoins are stored on the device.
-				<b>If you lose it, you'll lose your Solcoins.</b>
+                GanjaCoin are stored directly on the device.
+				<b>If you lose it, you will lose your GanjaCoins.</b>
 			</li>
 			<li>
 				This means you need to <b>back up your wallet</b>!
@@ -15,12 +15,12 @@
 			</li>
 			<li>
 
-				<b>Before uninstalling</b> (or clearing app data/wiping your device), <b>transfer your Solcoins to another wallet</b>.
-				Remaining Solcoins will be lost.
+				<b>Before uninstalling</b> (or clearing app data/wiping your device), <b>transfer your GanjaCoins to another wallet</b>.
+				Remaining GanjaCoins will be lost.
 			</li> 
 			<li>
 				<b>Payments are irreversible</b>.
-				If you send your Solcoins into the void, there is almost no way to get them back.
+				If you send your GanjaCoins into the void, there is almost no way to get them back.
 
 			</li>
 			<li>
